--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,39 +1,30 @@
 :9090 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / prometheus:9090 {
-            transparent
+    #basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
+    reverse_proxy prometheus:9090 {
         }
 
-    errors stderr
-    tls off
+    handle_errors stderr
 }
 
 :9093 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / alertmanager:9093 {
-            transparent
+    #basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
+    reverse_proxy alertmanager:9093 {
         }
 
-    errors stderr
-    tls off
+    handle_errors stderr
 }
 
 :9091 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / pushgateway:9091 {
-            transparent
+    #basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
+    reverse_proxy pushgateway:9091 {
         }
 
-    errors stderr
-    tls off
+    handle_errors stderr
 }
 
 :3000 {
-    proxy / grafana:3000 {
-            transparent
-            websocket
+    reverse_proxy grafana:3000 {
         }
 
-    errors stderr
-    tls off
+    handle_errors stderr
 }
